# IVE

./: .gitignore  .semgrepignore  .vscodeignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
daemon/: Cargo.toml
daemon/src/: cache.rs  config.rs  contracts.rs  events.rs  git.rs  health.rs  lib.rs  main.rs  rpc.rs  scanner.rs  state.rs  watcher.rs
daemon/src/analyzers/: binding.rs  crossfile.rs  grounding.rs  hallucination.rs  joern.rs  lsp.rs  mod.rs  pytea.rs  rust_analyzer.rs  semgrep.rs  slice.rs
daemon/src/parser/: complexity.rs  mod.rs  python.rs  rust.rs  typescript.rs
daemon/tests/: fixtures.rs  golden.rs  grounding_eval.rs
docs/: WORKSTREAMS.md
extension/: .vscodeignore  esbuild.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
extension/src/: codelens.ts  commands.ts  contracts.ts  daemon.test.ts  daemon.ts  diagnostics.ts  extension.ts  hover.test.ts  hover.ts  logger.ts  pack.test.ts  pack.ts  panel.ts
mcp/: README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json
mcp/src/: daemon.ts  server.test.ts  server.ts
rules/: ive-ai-slop.yml
scripts/: copy-wasm.mjs  ive-query.mjs
src/: declarations.d.ts  extension.ts  types.ts
src/__tests__/: astUtils.test.ts  callGraphExtractor.test.ts  complexityCalculator.test.ts  cycleDetector.test.ts  database.test.ts  diffAnalyzer.test.ts  graphAnalyzer.test.ts  languages.test.ts  mcpTools.test.ts  selfAudit.test.ts  symbolExtractor.test.ts
src/indexer/: IndexManager.ts  cycleDetector.ts  database.ts  diffAnalyzer.ts  gitChurnAnalyzer.ts  graphAnalyzer.ts  schema.ts
src/mcp/: index-cli.ts  schemas.ts  server.ts  tools.ts  viewerCommands.ts
src/parser/: TreeSitterParser.ts  astUtils.ts  (+4 more)
test/: e2e-stdio.sh  run_fixtures.sh
webview/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+168 files in other folders)
