[workspace]
resolver = "2"
members = ["daemon"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ThomasPluck/IVE"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "time", "fs", "process"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
notify = "8"
notify-debouncer-full = "0.6"
toml = "0.9"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
regex = "1"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
