[package]
name = "ive-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "IVE analysis daemon — parses, scores health, serves JSON-RPC"

[[bin]]
name = "ive-daemon"
path = "src/main.rs"

[lib]
name = "ive_daemon"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
ignore = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }
regex = { workspace = true }
ureq = { workspace = true }
